Remove Temporary Download Disable

--- a/Multi-TCG-Deckbuilder/Dialogs/Preferences.xaml
+++ b/Multi-TCG-Deckbuilder/Dialogs/Preferences.xaml
@@ -5,11 +5,12 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Multi_TCG_Deckbuilder.Dialogs"
         mc:Ignorable="d"
-        Title="Preferences" Height="150" Width="220"
-        MinHeight="150" MaxHeight="150"
+        Title="Preferences" Height="125" Width="220"
+        MinHeight="125" MaxHeight="125"
         MinWidth="220" MaxWidth="220"
-        DataContext="{Binding RelativeSource={RelativeSource Self}}">
-    <StackPanel Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" Orientation="Vertical">
+        DataContext="{Binding RelativeSource={RelativeSource Self}}"
+        Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" >
+    <StackPanel Orientation="Vertical" VerticalAlignment="Center">
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="10,0,15,0">
             <Label Content="Download Images?" VerticalAlignment="Center"/>
             <CheckBox IsChecked="{Binding DownloadImages}" VerticalAlignment="Center"/>
@@ -17,10 +18,6 @@
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="10,0,15,0">
             <Label Content="Hide Warning on Load?" VerticalAlignment="Center"/>
             <CheckBox IsChecked="{Binding HideWarning}" VerticalAlignment="Center"/>
-        </StackPanel>
-        <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="10,0,15,0">
-            <Label Content="Temporarily Disable Download?" VerticalAlignment="Center"/>
-            <CheckBox IsChecked="{Binding TempDownloadDisabled}" VerticalAlignment="Center"/>
         </StackPanel>
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
             <Button Margin="5,5,5,5" Width="40" Content="Save" Click="Button_Save_Click"/>
